--- a/.env.example
+++ b/.env.example
@@ -2,8 +2,8 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_URL=http://%IP_ADDRESS%/
-ASSET_URL=http://%IP_ADDRESS%/
+APP_URL=http://35.180.37.19
+ASSET_URL=http://35.180.37.19
 
 LOG_CHANNEL=stack
 
